# WBLimitsTracker

./: .env.example  .flake8  .gitignore  README.md  database.db  pyproject.toml  run.py
app/: __init__.py  bot.py  config.py  db.py  handlers.py  logging_config.py  routes.py  scheduler.py  services.py  user_repository.py
app/templates/: index.html
tests/: bot_test_1.py  bot_test_2.py
